--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="card">card</string>
     <string name="dollar">$</string>
+    <string name="refresh_page">Refresh page</string>
+    <string name="no_products_available">No products available.</string>
+    <string name="assignment_4">Assignment 4: API Adventures</string>
 </resources>
